Fix parent page alignment.

--- a/css/breakpoints.css
+++ b/css/breakpoints.css
@@ -128,6 +128,7 @@
     .entry .wp-caption,
     .entry .wp-caption img,
     .entry img,
+    #content-parent,
     #content-about,
     #content-about-content,
     #content-about-image {
@@ -300,6 +301,11 @@
   }
 
   #content-page {
+    padding: 0;
+  }
+
+  #content-parent .content {
+    margin: 0 -10px;
     padding: 0;
   }
 
